fix spockImg bug with z-index

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ button:hover {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    z-index: 99;
 }
 
 #close-modal-btn {
@@ -183,6 +184,7 @@ button:hover {
 
 #spockImg {
     transform: translateX(8px);
+    z-index: 1;
 }
 
 @media (min-width: 550px) {
